--- a/Geometric.csproj
+++ b/Geometric.csproj
@@ -55,15 +55,34 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Abstract.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Inheritance.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Compile Include="Abstract.xaml.cs">
+      <DependentUpon>Abstract.xaml</DependentUpon>
+    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Class_laba2\RigthTriangle.cs" />
+    <Compile Include="Class_laba2\Triangle.cs" />
+    <Compile Include="Class_laba3\Conus.cs" />
+    <Compile Include="Class_laba3\Figura3D.cs" />
+    <Compile Include="Class_laba3\Piramid.cs" />
     <Compile Include="GeometricProgression.cs" />
+    <Compile Include="Inheritance.xaml.cs">
+      <DependentUpon>Inheritance.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -95,5 +114,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
